--- a/web project/appsettings.json
+++ b/web project/appsettings.json
@@ -5,5 +5,9 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "web_projectContext": "Server=(localdb)\\mssqllocaldb;Database=web_projectContext-b6976faa-aa2b-431b-b2c5-ccfb7db01591;Trusted_Connection=True;MultipleActiveResultSets=true",
+    "myconn": "Data Source=GA\\SQLEXPRESS;Initial Catalog=restaurant;Integrated Security=True;Trust Server Certificate=True"
+  }
 }
